# whatsapp-chat-reader

./: .gitignore  AGENTS.md  LICENSE  Makefile  README copy.md  README.md  TEST_RESULTS.md  easy_server.sh  embedded_virtual_chat.py  html_generator.py  hybrid_virtual_chat.py  progressive_server.py  pyproject.toml  regenerate_html.py  requirements-dev.txt  requirements.txt  run_server.sh  server.sh  setup.py  smart_virtual_chat.py  static_virtual_chat.py  test_real_example.sh  test_relative_paths.py
.github/: copilot-instructions.md  copilot-setup.yml
src/whatsapp_chat_reader/: __init__.py  embedded_virtual_generator.py  html_generator.py  hybrid_virtual_generator.py  main.py  parser.py  progressive_virtual_generator.py  smart_virtual_generator.py  static_virtual_generator.py
static/: wa.css
tests/: test_real_example.py  test_whatsapp_chat_reader.py
tests/real-example-test/: 00000060-AUDIO-2021-05-12-10-15-48.opus  00000090-AUDIO-2021-05-12-14-13-46.opus  00000104-AUDIO-2021-05-13-10-14-40.opus  00000148-AUDIO-2021-05-17-12-12-32.opus  00000149-AUDIO-2021-05-17-13-12-35.opus  00000152-AUDIO-2021-05-17-13-37-52.opus  00000272-AUDIO-2021-05-21-11-30-21.opus  00000311-AUDIO-2021-05-24-12-31-30.opus  00000313-AUDIO-2021-05-25-10-06-12.opus  00000314-AUDIO-2021-05-25-10-10-14.opus  00000318-AUDIO-2021-05-25-13-10-49.opus  00000322-AUDIO-2021-05-26-10-02-23.opus  00000323-AUDIO-2021-05-26-10-11-22.opus  00000324-AUDIO-2021-05-26-10-12-56.opus  00000325-AUDIO-2021-05-26-10-40-21.opus  00000326-AUDIO-2021-05-26-10-58-51.opus  00000327-AUDIO-2021-05-26-11-32-27.opus  (+1077 more)
